AC_INIT(configure.in)
AM_INIT_AUTOMAKE(media-encoding-cluster, 0.1)
AM_CONFIG_HEADER(config.h)
#AM_PATH_CPPUNIT(1.10.2)
#AC_CONFIG_HEADERS(config.h)

#AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
if test ! -d "$srcdir/external"; then
	mkdir external
fi

#AC_MSG_ERROR([$PATH])
AC_ARG_WITH(ffmpeg, [  --with-ffmpeg=path   where ffmpeg is installed. (Standard is "/usr/local")],
	    FFMPEG_CFLAGS="-I$withval/include"
	    FFMPEG_LD="-L$withval/lib -lavformat -lavcodec -lavutil -lswscale"
	    FFMPEG_PATH="$withval")

#CPPFLAGS="$CPPFLAGS $FFMPEG_CFLAGS"

AC_ARG_WITH(boost-lib, [  --with-boost-lib=path where boost libraries are installed. ],
	    BOOST_LD="-L$withval")

LDFLAGS="$LDFLAGS $BOOST_LD"
AC_ARG_WITH(boost-inc, [  --with-boost-inc=path where boost headers are installed.],
	    BOOST_CFLAGS="-I$withval")

CPPFLAGS="$CPPFLAGS $BOOST_CFLAGS"

AC_ARG_WITH(tntnet, [  --with-tntnet=path   where tntnet is installed. (Standard is "/usr/local")],
	    TNTNET_CFLAGS="-I$withval/include"
	    TNTNET_LD="-L$withval/lib -ltntnet"
	    TNTNET_PATH="$withval")
AC_SUBST(TNTNET_PATH)
CPPFLAGS="$CPPFLAGS $TNTNET_CFLAGS"
LDFLAGS="$LDFLAGS $TNTNET_LD"

AC_ARG_WITH(tntdb, [  --with-tntdb=path   where tntdb is installed. (Standard is "/usr/local")],
	    TNTDB_CFLAGS="-I$withval/include"
	    TNTDB_LD="-L$withval/lib -ltntdb"
	    TNTDB_PATH="$withval")

CPPFLAGS="$CPPFLAGS $TNTDB_CFLAGS"
LDFLAGS="$LDFLAGS $TNTDB_LD"

AC_ARG_WITH(tnttools, [  --with-tnttools=path   where tnt cxxtools is installed. (Standard is "/usr/local")],
	    TNTTOOLS_CFLAGS="-I$withval/include"
	    TNTTOOLS_LD="-L$withval/lib -ltntnet"
	    TNTTOOLS_PATH="$withval")

CPPFLAGS="$CPPFLAGS $TNTTOOLS_CFLAGS"
LDFLAGS="$LDFLAGS $TNTTOOLS_LD"

# moved up to comply with standard autoconf layout 
# http://www.gnu.org/software/autoconf/manual/autoconf-2.57/html_mono/autoconf.html#SEC10






#AC_CHECK_LIB(avcodec, av_free)
#AC_CHECK_LIB(avformat, av_free)
#AC_CHECK_LIB(avutil, av_free)
AC_CHECK_LIB(pthread, main)
AC_CHECK_HEADERS([pthread.h])





#CXXFLAGS+="-I`pwd`/external/ffmpeg/libavutil"
#CXXFLAGS+="-I`pwd`/external/ffmpeg/libavformat"
#CXXFLAGS+="-I`pwd`/external/ffmpeg/libavcodec"
#CXXFLAGS+="-I`pwd`/external/ffmpeg/libswscale"

# check for bzip2 development headers
#AC_CHECK_HEADERS([bzlib.h],
#                [AC_DEFINE([HAVE_BZLIB_H])],
#                [AC_MSG_ERROR([
#*********************************************************************
#Sorry, bzlib.h not found. you need to install bzip2 library with
#development headers.
#*********************************************************************
#])])

CXXFLAGS="$CPPFLAGS $FFMPEG_CFLAGS -D__STDC_CONSTANT_MACROS -Wall -Wno-switch  -D_LARGEFILE_SOURCE -D_GNU_SOURCE -g -O0 -Weffc++"

LDFLAGS="$LDFLAGS $FFMPEG_LD -lpthread -lboost_serialization -lboost_signals -lsqlite3 -lboost_thread-mt -L/usr/lib/mysql -lmysqlclient -lcppunit /home/jhoelscher/bripper/x264/lib/libx264.a"

if test -d "$srcdir/external/boost"; then
#  AC_OUTPUT(external/Makefile)
  AC_CONFIG_SUBDIRS([external/boost])
  LDFLAGS+=" -L`pwd`/external/boost"
fi

if test -d "$srcdir/external/cxxtools"; then
#  AC_OUTPUT(external/Makefile)
  AC_CONFIG_SUBDIRS([external/cxxtools])
  CXXFLAGS+=" -I`pwd`/external/cxxtools/include"
  PATH="`pwd`/external:$PATH"
  AC_SUBST(PATH)
fi

if test -d "$srcdir/external/tntdb"; then
#  AC_OUTPUT(external/Makefile)
  AC_CONFIG_SUBDIRS([external/tntdb])
  CXXFLAGS+=" -I`pwd`/external/tntdb/include"
  LDFLAGS+=" -L`pwd`/external/tntdb/src -ltntdb"
fi

if test -d "$srcdir/external/tntnet"; then
#  AC_OUTPUT(external/Makefile)
  AC_CONFIG_SUBDIRS([external/tntnet])
  CXXFLAGS+=" -I`pwd`/external/tntnet/framework/common"
  LDFLAGS+=" -L`pwd`/external/tntnet/framework/common -ltntnet"
fi

if test -d "$srcdir/external/libx264"; then
#  AC_OUTPUT(external/Makefile)
  AC_CONFIG_SUBDIRS([external/libx264])
  LDFLAGS+=" -L`pwd`/external/libx264 -lx264"
fi

if test -d "$srcdir/external/ffmpeg"; then
#  AC_OUTPUT(external/Makefile)
  AC_CONFIG_SUBDIRS([external/ffmpeg])
  CXXFLAGS+=" -I`pwd`/external/ffmpeg"
  LDFLAGS+=" -L`pwd`/external/ffmpeg/libavutil -lavutil"
  LDFLAGS+=" -L`pwd`/external/ffmpeg/libavformat -lavformat"
  LDFLAGS+=" -L`pwd`/external/ffmpeg/libavcodec -lavcodec"
  LDFLAGS+=" -L`pwd`/external/ffmpeg/libswscale -lswscale"
fi



CPPFLAGS="$CXXFLAGS"
AC_CHECK_HEADERS([libavcodec/avcodec.h libavformat/avformat.h],
                ,
                [AC_MSG_ERROR([
*********************************************************************
Sorry, no avcodec.h or avformat.h found,
you need to install ffmpeg Library with development headers from
http://ffmpeg.mplayerhq.hu
*********************************************************************
])])




AC_OUTPUT(
    Makefile 
    src/Makefile 
    src/org/Makefile
    src/org/esb/Makefile
    src/org/esb/lang/Makefile
    src/org/esb/util/Makefile
    src/org/esb/io/Makefile
    src/org/esb/av/Makefile
    src/org/esb/net/Makefile
    src/org/esb/hive/Makefile
    src/org/esb/web/Makefile
    src/org/esb/sql/Makefile
    test/Makefile
dnl    test/fobs/Makefile
dnl    src/hive.client/Makefile 
dnl    src/org/esb/hivecontrol/Makefile
dnl    src/framehive/Makefile     
dnl    src/hive.listener/Makefile 
dnl    src/hive.server/Makefile 
dnl    src/org/esb/lang/Makefile
dnl    src/org/esb/socket/Makefile
dnl    src/org/esb/config/Makefile
dnl    src/org/esb/config/Makefile
    )
